--- a/SimpleNeuralNetwork.ipynb
+++ b/SimpleNeuralNetwork.ipynb
@@ -21,7 +21,7 @@
         "    def _activation(self, output):\n",
         "        return 1 if output > 0 else 0\n",
         "\n",
-        "    def decide(self, input_list):\n",
+        "    def predict(self, input_list):\n",
         "        output = self._calculate_output(input_list)\n",
         "        return self._activation(output)\n",
         "\n",
@@ -50,11 +50,11 @@
         "\n",
         "def runTraining(neuron):\n",
         "    for input_list, output in zip(input_lists, outputs):\n",
-        "        error = neuron.decide(input_list) - output\n",
+        "        error = neuron.predict(input_list) - output\n",
         "        neuron.learn(input_list, error)\n",
         "\n",
         "def runTesting(neuron):\n",
-        "    return [neuron.decide(input_list) for input_list in input_lists]\n",
+        "    return [neuron.predict(input_list) for input_list in input_lists]\n",
         "\n",
         "def runEvaluation(neuron):\n",
         "    predictions = runTesting(neuron)\n",
